# JME-ESWA

./: README.md  pyproject.toml
dataset/toy/: item_masters.txt  kg.txt  train.txt  user_masters.txt
jme/: dataset.py  jme.py  metrics.py  parser.py  test.py  train.py  utils.py
jme/kge/: compl_ex.py  conv_e.py  dist_mult.py  kg2e.py  trans_e.py  trans_h.py  trans_r.py
