[tool.poetry]
name = "JME-ESWA"
version = "1.0.0"
description = ""
authors = ["Yosuke Saito"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl"}
numpy = "1.19.5"
pandas = "1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
