[tool.poetry]
name = "JME-ESWA"
version = "1.0.0"
description = ""
authors = ["Yosuke Saito"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.19.5"
pandas = "1.3.3"
torch = "1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
